--- a/resources/styles/partials/_buttons.scss
+++ b/resources/styles/partials/_buttons.scss
@@ -1,6 +1,9 @@
+@use "./variables";
+
 .btn {
   --outline-offset-x: var(--outline-offset);
   --outline-offset-y: var(--outline-offset);
+  --outline-color: #{variables.$secondary};
 
   position: relative;
   z-index: 0;
@@ -34,15 +37,17 @@
     right: calc(0px - var(--outline-offset-x));
     width: 100%;
     height: 100%;
-    border: 3px solid $secondary;
+    border: 3px solid var(--outline-color);
     transition: all .3s;
     z-index: -1;
   }
 
   &:hover {
     &:before {
-      top: calc(0px - (var(--outline-offset-y) * .4));
-      right: calc(0px - (var(--outline-offset-x) * .4));
+      //top: calc(0px - (var(--outline-offset-y) * .4));
+      //right: calc(0px - (var(--outline-offset-x) * .4));
+      top: 0;
+      right: 0;
     }
   }
 
@@ -52,4 +57,12 @@
       right: 0;
     }
   }
+}
+
+
+.btn-outline-primary {
+  --bs-btn-bg: #{variables.$light};
+  --bs-btn-border-color: #{variables.$dark};
+  --bs-btn-color: #{variables.$dark};
+  --outline-color: #{variables.$primary};
 }
