--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -10,3 +10,9 @@
 @import "./partials/buttons";
 @import "./partials/cards";
 @import "./partials/lists";
+@import "./partials/spacing";
+@import "./partials/typography";
+@import "./partials/footer";
+
+
+
