Jumbo section to finish

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -13,6 +13,8 @@
 @import "./partials/spacing";
 @import "./partials/typography";
 @import "./partials/footer";
+@import "./partials/jumbo";
+
 
 
 
