--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -14,6 +14,8 @@
 @import "./partials/typography";
 @import "./partials/footer";
 @import "./partials/jumbo";
+@import "./partials/squarebtn";
+
 
 
 
