--- a/resources/styles/partials/_jumbo.scss
+++ b/resources/styles/partials/_jumbo.scss
@@ -2,3 +2,16 @@
 .f-spacing {
  letter-spacing: 6px;
 }
+
+.img-border {
+ position: absolute;
+    bottom: 36px;
+    left: 36px;
+    z-index: -1;
+}
+
+.highlight {
+ background:  #f6e077;
+ color: #1d1d1d;
+ // padding:0 0.5rem;
+}
