--- a/resources/styles/partials/_variables.scss
+++ b/resources/styles/partials/_variables.scss
@@ -40,3 +40,4 @@ $h4-font-size: $font-size-base * 1.75;
 $h5-font-size: $font-size-base * 1.25;
 $h6-font-size: $font-size-base;
 
+$enable-negative-margins: true
