jumbo align right column

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -15,6 +15,12 @@
 @import "./partials/footer";
 @import "./partials/jumbo";
 @import "./partials/squarebtn";
+@import "./partials/utility";
+@import "./partials/accordion";
+
+
+
+
 
 
 
