--- a/resources/styles/partials/_jumbo.scss
+++ b/resources/styles/partials/_jumbo.scss
@@ -10,8 +10,15 @@
     z-index: -1;
 }
 
-.highlight {
- background:  #f6e077;
- color: #1d1d1d;
- // padding:0 0.5rem;
+
+
+
+.img-bw {
+    filter: grayscale(100%);
+    transition: filter 1s ease-in-out;
+}
+
+.img-bw:hover {
+    filter: grayscale(0%);
+    cursor: pointer;
 }
