home page not responsive

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -17,6 +17,10 @@
 @import "./partials/squarebtn";
 @import "./partials/utility";
 @import "./partials/accordion";
+@import "./partials/service-card";
+@import "./partials/navlink";
+
+
 
 
 
