--- a/resources/styles/partials/_footer.scss
+++ b/resources/styles/partials/_footer.scss
@@ -1,23 +1,49 @@
 @use "./variables";
 
 .wab-footer {
- .btn{
-        --outline-color:#{$primary};
-        --bs-btn-bg:#{$dark};
-        --bs-btn-border-color:#{$light};
-        --bs-btn-color:#{$light};
+  .btn {
+    --outline-color: #{$primary};
+    --bs-btn-bg: #{$dark};
+    --bs-btn-border-color: #{$light};
+    --bs-btn-color: #{$light};
+  }
+
+  .div-with-title {
+    min-height: 130px;
+  }
+
+  .social .icon {
+    transition: color 0.3s ease-in-out;
+    color: var(--bs-primary);
+
+    &.wab-highlight {
+      --x-offset: -.35em;
+      --y-offset: -.35em;
+
+      &:after {
+        opacity: 0;
+        transition: opacity 300ms ease-in-out;
+      }
+
+      &:hover {
+        &:after {
+          opacity: 1;
+        }
+      }
     }
 
-    .div-with-title {
- min-height: 130px;
-}
+    svg {
+      transition: transform 300ms ease-in-out;
+    }
 
-.social img {
- transition: all 300ms ease-in-out;
- &:hover{
-  rotate: 15deg;
- }
-}
+    &:hover {
+      color: var(--bs-dark);
+
+      svg {
+        transform: rotate(15deg);
+      }
+    }
+  }
 }
 
 
