adaptive nav & footer

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -4,6 +4,8 @@
 @import "bootstrap/scss/bootstrap";
 
 @import "./css_variables";
+@import "./chisiamo";
+
 
 @import "./partials/reset";
 @import "./partials/inputs";
@@ -19,6 +21,8 @@
 @import "./partials/accordion";
 @import "./partials/service-card";
 @import "./partials/navlink";
+@import "./partials/offcanvas";
+
 
 
 
