--- a/resources/styles/partials/_variables.scss
+++ b/resources/styles/partials/_variables.scss
@@ -7,6 +7,8 @@ $secondary-text: $secondary;
 $light-text: $light;
 $dark-text: $dark;
 
+$input-placeholder-color: $secondary;
+
 $body-color: $light;
 $body-bg: $dark;
 $headings-color: $light;
