--- a/resources/styles/partials/_buttons.scss
+++ b/resources/styles/partials/_buttons.scss
@@ -10,6 +10,7 @@
 
     &:after {
         content: "";
+        // border: 1px solid $dark;
         display: block;
         position: absolute;
         top: 0;
