--- a/resources/styles/partials/_navlink.scss
+++ b/resources/styles/partials/_navlink.scss
@@ -1,147 +1,230 @@
 @use "./variables";
 
+
 .wab-nav {
-  .btn {
-    --outline-color: #{$primary};
-    --bs-btn-bg: #{$dark};
-    --bs-btn-border-color: #{$light};
-    --bs-btn-color: #{$light};
-  }
-
-  .navbar-nav {
-    --bs-nav-link-color: #{$light};
-    --bs-nav-link-hover-color: #{$dark};
-
-    .navHighlight {
-      z-index: -1;
+    .navbar-nav {
+        .nav-link {
+            padding-left: 1rem;
+            padding-right: 1rem;
+        }
     }
 
-    .nav-link {
-      padding-left: 1rem;
-      padding-right: 1rem;
+    .dropdown-item {
+        transition: all 0.3s ease-in-out;
+
+        .icon {
+            margin-left: 0.5rem;
+            transition: all 0.3s ease-in-out;
+        }
     }
-  }
 
-  .dropdown-item {
-    transition: all 0.3s ease-in-out;
+    .dropdown-item:hover,
+    .dropdown-item:focus {
+        background-color: transparent;
 
-    img {
-      transition: all 0.3s ease-in-out;
+        .icon {
+            rotate: -45deg;
+        }
     }
-  }
 
-  .dropdown-item:hover,
-  .dropdown-item:focus {
-    // color: var(--bs-dropdown-link-hover-color);
-    background-color: transparent;
-    // justify-content: space-between;
-    color: #{$primary};
+    .nav-link,
+    .dropdown {
+        position: relative;
+        transition: all 0.3s ease-in-out;
 
+        &:not(.active) {
+            &::after {
+                content: "";
+                opacity: 0;
+                height: 1px;
+                width: 10%;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                transition: all 0.3s ease-in-out;
+            }
 
-    img {
-      rotate: -45deg;
-      margin-left: 5rem;
+            &:hover::after {
+                opacity: 1;
+                width: 100%;
+
+                transition: all 0.3s ease-in-out;
+            }
+        }
     }
-  }
 
-  .nav-link,
-  .dropdown {
-    position: relative;
-    transition: all 0.3s ease-in-out;
+    .nav-link.active {
+        transition: all 0.3s ease-in-out;
+        background-color: transparent;
 
-    &:not(.active) {
-      &::after {
-        content: "";
-        opacity: 0;
-        height: 1px;
-        width: 10%;
+        // changes the default highlight size
+        &.wab-highlight {
+            --x-offset: 0.2rem;
+            --y-offset: 0.2rem;
+        }
+    }
+
+    .dropdown-toggle {
+        .imgWhite {
+            transition: all 0.3s ease-in-out;
+        }
+
+        &:hover {
+            .imgWhite {
+                rotate: 45deg;
+            }
+        }
+    }
+
+    &.dark-nav {
+        .btn {
+            --outline-color: #{$primary};
+            --bs-btn-bg: #{$dark};
+            --bs-btn-border-color: #{$light};
+            --bs-btn-color: #{$light};
+        }
+
+        .navbar-nav {
+            --bs-nav-link-color: #{$light};
+            --bs-nav-link-hover-color: #{$dark};
+        }
+
+        .dropdown-item:hover,
+        .dropdown-item:focus {
+            color: #{$primary};
+
+            .icon {
+                color: #{$primary};
+            }
+        }
+
+        .nav-link,
+        .dropdown {
+            &:not(.active) {
+                &::after {
+                    background-color: #{$primary};
+                }
+            }
+        }
+
+        .dropdown-toggle::after {
+            display: none;
+        }
+
+        .nav-link {
+            color: #{$light};
+        }
+
+        .wab-highlight {
+            color: #{$dark};
+        }
+    }
+
+    &.yellow-nav {
         background-color: #{$primary};
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        transition: all 0.3s ease-in-out;
-      }
+        .btn {
+            --outline-color: #{$secondary};
+            --bs-btn-bg: #{$primary};
+            --bs-btn-border-color: #{$dark};
+            --bs-btn-color: #{$dark};
+                --bs-btn-hover-bg: #{$primary};
+            --bs-btn-hover-border-color: #{$dark};
 
-      &:hover::after {
-        opacity: 1;
-        width: 100%;
 
-        transition: all 0.3s ease-in-out;
-      }
 
-      &:focus {
-        // --bs-nav-link-hover-color: #{$light};
-      }
+            
+        }
+
+        .navbar-nav {
+            --bs-nav-link-color: #{$dark};
+            --bs-nav-link-hover-color: #{$light};
+
+            .navHighlight {
+                z-index: 0;
+            }
+        }
+
+        .dropdown-item:hover,
+        .dropdown-item:focus {
+            color: #{$primary};
+
+            .icon {
+                color: #{$primary};
+            }
+        }
+
+        .nav-link,
+        .dropdown {
+            &:not(.active) {
+                &::after {
+                    background-color: #{$secondary};
+                }
+            }
+        }
+
+        .dropdown-toggle::after {
+            display: none;
+        }
+
+        .nav-link {
+            color: #{$dark};
+        }
+
+        .nav-link.active {
+            color: #{$light};
+
+            &.wab-highlight {
+                &:after {
+                    background-image: url("/public/assets/highlight_secondary.svg");
+                }
+            }
+        }
     }
-  }
 
-  .dropdown-toggle::after {
-    display: none;
-  }
+    &.white-nav {
+        background-color: #{$light};
+        .btn {
+            --outline-color: #{$primary};
+            --bs-btn-bg: #{$light};
+            --bs-btn-border-color: #{$dark};
+            --bs-btn-color: #{$dark};
+            --bs-btn-hover-bg: #{$primary};
+            --bs-btn-hover-border-color: #{$dark};
+        }
 
-  .dropdown-toggle {
-    .navHighlight {
-      opacity: 0;
-      transition: all ease 1s;
+        .navbar-nav {
+            --bs-nav-link-color: #{$light};
+            --bs-nav-link-hover-color: #{$dark};
+        }
+
+        .dropdown-item:hover,
+        .dropdown-item:focus {
+            color: #{$primary};
+
+            .icon {
+                color: #{$primary};
+            }
+        }
+
+        .nav-link,
+        .dropdown {
+            &:not(.active) {
+                &::after {
+                    background-color: #{$primary};
+                }
+            }
+        }
+
+        .dropdown-toggle::after {
+            display: none;
+        }
+
+        .nav-link {
+            color: #{$dark};
+        }
+
+        .wab-highlight {
+            color: #{$dark};
+        }
     }
-
-    .imgBlack {
-      display: none;
-      transition: all ease 1s;
-    }
-
-    .imgWhite {
-      transition: all ease 1s;
-    }
-
-    &:hover {
-      // .navHighlight {
-      //     opacity: 1;
-      // }
-      //           .imgBlack {
-      // fill:red;
-
-      //               display: inline-block;
-      //               rotate: 45deg;
-      //           }
-
-      .imgWhite {
-        // display: none;
-        rotate: 45deg;
-      }
-    }
-
-    &:focus {
-      // .navHighlight {
-      //        opacity: 1;
-      //    }
-      .imgBlack {
-        display: inline-block;
-        rotate: 45deg;
-      }
-
-      .imgWhite {
-        // display: none;
-        rotate: 45deg;
-      }
-
-      // color: #{$light};
-    }
-  }
-
-  .nav-link {
-    color: #{$light};
-  }
-
-  .nav-link.active {
-    transition: all 0.3s ease-in-out;
-    background-color: transparent;
-    color: #{$dark};
-
-    // changes the default highlight size
-    &.wab-highlight {
-      --x-offset: .2rem;
-      --y-offset: .2rem;
-    }
-  }
 }
