--- a/resources/styles/partials/_squarebtn.scss
+++ b/resources/styles/partials/_squarebtn.scss
@@ -40,10 +40,9 @@
 }
 
 .btn-hover {
- .red-square{
+    .red-square {
         margin-right: -91px;
-
- }
+    }
 
     &:hover {
         .white-square {
@@ -77,5 +76,117 @@
             rotate: 7deg;
             translate: 65px;
         }
+    }
+}
+
+.wbaModal {
+    color: #{$dark};
+    --bs-modal-bg: #{$light};
+    --bs-modal-border-radius: 0;
+    $input-placeholder-color: gray;
+    // --bs-modal-width: 50vw;
+
+    .modal-body {
+        --outline-offset-x: var(--outline-offset);
+        --outline-offset-y: var(--outline-offset);
+        --outline-color: #{variables.$primary};
+        position: relative;
+        z-index: 0;
+        background-color: #{$light};
+
+        &:after {
+            content: "";
+            border: 3px solid $dark;
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+            background: #{$light};
+            transition: all 0.3s;
+            z-index: -1;
+        }
+
+        &:before {
+            content: "";
+            display: block;
+            position: absolute;
+            top: calc(0px - var(--outline-offset-y));
+            right: calc(0px - var(--outline-offset-x));
+            width: 100%;
+            height: 100%;
+            border: 3px solid var(--outline-color);
+            transition: all 0.3s;
+            z-index: -1;
+        }
+    }
+
+    .modal-dialog {
+        height: 100vh;
+        margin-right: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    .btn-close {
+        --bs-btn-close-opacity: 1;
+    }
+    .btn {
+        --outline-color: #{$primary};
+        --bs-btn-bg: #{$light};
+        --bs-btn-border-color: #{$dark};
+        --bs-btn-color: #{$dark};
+    }
+}
+
+.wbaOffCanvas {
+    --bs-offcanvas-color: #{$dark};
+    --bs-offcanvas-bg: #{$light};
+    --bs-offcanvas-width: 500px;
+
+    .offcanvas-form {
+        --outline-offset-x: var(--outline-offset);
+        --outline-offset-y: var(--outline-offset);
+        --outline-color: #{variables.$primary};
+        position: relative;
+        z-index: 0;
+        background-color: #{$light};
+
+        &:after {
+            content: "";
+            border: 3px solid $dark;
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+            background: #{$light};
+            transition: all 0.3s;
+            z-index: -1;
+        }
+
+        &:before {
+            content: "";
+            display: block;
+            position: absolute;
+            top: calc(0px - var(--outline-offset-y));
+            right: calc(0px - var(--outline-offset-x));
+            width: 100%;
+            height: 100%;
+            border: 3px solid var(--outline-color);
+            transition: all 0.3s;
+            z-index: -1;
+        }
+    }
+
+    .btn-close {
+        --bs-btn-close-opacity: 1;
+    }
+    .btn {
+        --outline-color: #{$primary};
+        --bs-btn-bg: #{$light};
+        --bs-btn-border-color: #{$dark};
+        --bs-btn-color: #{$dark};
     }
 }
