--- a/resources/styles/chisiamo.scss
+++ b/resources/styles/chisiamo.scss
@@ -1,7 +1,108 @@
-.white-square{
- color: #{$dark};
-}
+.wab-chi-siamo {
 
-.secondary-hr{
- border-color: #{$secondary};
+ .white-square {
+  color: #{$dark};
+ }
+
+  .secondary-hr {
+   border-color: #{$secondary};
+  }
+ 
+  .filigram {
+   color: #{$primary};
+   font-size: 10vw;
+   opacity: 5%;
+  }
+ 
+ 
+ 
+ 
+  .wab-accordion {
+   --bs-accordion-color: #{$light};
+   --bs-accordion-border-color: #{$primary};
+   --bs-accordion-border-width: #{3px};
+   --bs-accordion-btn-active-icon: src="";
+   --bs-accordion-btn-color: #{$light};
+   --bs-accordion-bg: #{$dark};
+   --bs-accordion-active-bg: #{$dark};
+   --bs-accordion-active-color: #{$light};
+   --bs-accordion-btn-padding-y: 2rem;
+   border-top: 3px solid #{$primary};
+   border-bottom: 3px solid #{$primary};
+ 
+   .accordion-item:has(.show) {
+    background-color: #{$dark};
+    --bs-accordion-active-color: #{$light};
+    // border-top: 3px solid #{$dark};
+    // border-color: #{$dark}
+   }
+ 
+   .accordion-item {
+    transition: all ease .5s;
+    position: relative;
+ 
+    .cup {
+     opacity: 0;
+     transition: opacity .3s ease;
+     margin-top: 0;
+    }
+ 
+    .text {
+     position: relative;
+     padding-left: 70px;
+     transition: padding ease .5s;
+    }
+ 
+    .arrow {
+     position: absolute;
+     top: 50%;
+     left: 0;
+     transform: translate(0, -50%);
+     transition: transform ease .5s, left ease .5s;
+     transform-origin: center;
+    }
+ 
+    &:hover {
+     background-color: #{$dark};
+     color: #{$primary};
+ 
+     .arrow {
+      transform: translate(20%, -50%) rotate(-45deg);
+      color: #{$primary};
+     }
+    }
+ 
+    .accordion-button {
+     color: #{$light-text};
+     background-color: transparent;
+     box-shadow: none;
+     display: flex;
+     column-gap: 1rem;
+ 
+     &::after {
+      background-image: none;
+     }
+ 
+     &:not(.collapsed) {
+      .text {
+       padding-left: 20px;
+      }
+ 
+      .arrow {
+       left: 100%;
+       transform: translate(100%, -50%) rotate(135deg);
+      }
+     }
+    }
+   }
+ 
+   .show {
+    .cup {
+     opacity: 100%;
+     // NON possiamo usare il margin negativo perchè il padre ha la classe collapse e quindi ha un overflow quando
+     // si apre e si chiude, quindi risulterebbe in un effetto brutto e scattoso
+     //margin-top: -10%;
+    }
+   }
+  }
 }
