--- a/resources/styles/partials/_jumbo.scss
+++ b/resources/styles/partials/_jumbo.scss
@@ -1,19 +1,20 @@
-.f-spacing {
-    letter-spacing: 6px;
-}
 
-.img-border {
-    position: absolute;
-    bottom: 36px;
-    left: 36px;
-}
+        .f-spacing {
+            letter-spacing: 6px;
+        }
 
-.img-bw {
-    filter: grayscale(100%);
-    transition: filter 1s ease-in-out;
-}
+                .img-border {
+                    position: absolute;
+                    bottom: 36px;
+                    left: 36px;
+                }
 
-.img-bw:hover {
-    filter: grayscale(0%);
-    cursor: pointer;
-}
+                .img-bw {
+                    filter: grayscale(100%);
+                    transition: filter 1s ease-in-out;
+
+        &:hover {
+                filter: grayscale(0%);
+                cursor: pointer;
+            }
+                }
