active class to nav links

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -23,6 +23,7 @@ $enable-responsive-font-sizes: true;
 @import "./partials/navlink";
 @import "./partials/offcanvas";
 @import "./partials/contact";
+@import "./partials/diagonalAccordion";
 @import "./chisiamo";
 @import "./servizi";
 // @import "./partials/chisiamo";
