--- a/resources/styles/partials/_typography.scss
+++ b/resources/styles/partials/_typography.scss
@@ -12,6 +12,7 @@
     display: inline-block;
     line-height: 1.4;
     white-space: nowrap;
+    text-decoration: none;
     z-index: 0;
 
     &:after {
