--- a/resources/styles/partials/_diagonalAccordion.scss
+++ b/resources/styles/partials/_diagonalAccordion.scss
@@ -1,23 +1,138 @@
 @use "./variables";
 
-
 .wabDa {
+    rotate: 15deg;
 
- .nav {
-  --bs-nav-link-color:#{$light};
-  --bs-nav-link-hover-color: #{$primary};
-  display: flex;
-  text-align: start;
-  width: 100%;
+    .nav {
+        --bs-nav-link-color: #{$light};
+        --bs-nav-link-hover-color: #{$primary};
+        display: flex;
+        text-align: start;
+        width: 100%;
 
-  .nav-link {
-   border-bottom: 3px solid #{$primary};
-  }
- }
+        .nav-link {
+            display: flex;
+            align-items: flex-end;
+            align-content: center;
+            border-bottom: 3px solid #{$primary};
+            text-align: left;
+            transition: all 300ms ease-in-out;
 
- .nav-pills .nav-link.active,
- .nav-pills .show>.nav-link {
-  color: #{$primary};
-  background-color: transparent;
- }
+            .position-relative:has(.positioning) {
+                height: 100px;
+
+                .positioning {
+                    display: flex;
+                }
+            }
+
+            .text {
+                width: fit-content;
+                display: flex;
+                flex-direction: column;
+            }
+
+            .icon {
+                // margin-bottom: 0.3rem;
+                transition: all 300ms ease-in-out;
+            }
+
+            .number {
+                transition: all 300ms ease-in-out;
+            }
+
+            &:hover,
+            &:focus {
+                color: #{$dark} !important;
+                -webkit-text-stroke: 1px #{$primary};
+
+                .number {
+                    align-self: flex-end;
+                -webkit-text-stroke: 1px #{$primary};
+
+                }
+
+                .icon {
+                color: #{$primary} !important;
+
+                    margin-top: 1rem;
+                }
+                &:first-of-type {
+                    .icon {
+                        rotate: 75deg;
+                    }
+                }
+                &:nth-of-type(2) {
+                    .icon {
+                        rotate: 90deg;
+                    }
+                }
+                &:nth-of-type(3) {
+                    .icon {
+                        rotate: 115deg;
+                    }
+                }
+                &:nth-of-type(4) {
+                    .icon {
+                        rotate: 135deg;
+                    }
+                }
+            }
+
+            .positioning {
+                align-items: center;
+                position: absolute;
+                top: 15%;
+            }
+
+            &:first-of-type {
+                margin-left: -5.5rem;
+                .positioning {
+                    left: 0;
+                }
+            }
+            &:nth-of-type(2) {
+                margin-left: -4.5rem;
+                width: 109%;
+
+                // margin-left: 1rem;
+                .positioning {
+                    right: 65%;
+                }
+            }
+
+            &:nth-of-type(3) {
+                margin-left: -2.5rem;
+                width: 109%;
+                .positioning {
+                    right: 35%;
+                }
+            }
+
+            &:nth-of-type(4) {
+                margin-left: -1.5rem;
+                width: 111%;
+                .positioning {
+                    right: 4rem;
+                }
+            }
+        }
+    }
+
+    .nav-pills .nav-link.active,
+    .nav-pills .show > .nav-link {
+        color: #{$primary};
+        background-color: transparent;
+    }
+
+    .tab-content {
+        position: relative;
+        z-index: -1;
+        height: 172px;
+        rotate: -15deg;
+        padding-left: 4rem;
+        .tab-pane {
+            max-width: 30%;
+        }
+    }
 }
