--- a/resources/styles/partials/_accordion.scss
+++ b/resources/styles/partials/_accordion.scss
@@ -1,86 +1,124 @@
 .wab-accordion {
-  border-top: 3px solid #{$primary};
-  border-bottom: 3px solid #{$primary};
-  --bs-accordion-color: #{$dark};
-  --bs-accordion-border-color: #{$primary};
-  --bs-accordion-border-width: #{3px};
-  --bs-accordion-btn-active-icon: src= "";
-  --bs-accordion-btn-color: #{$dark};
-  --bs-accordion-bg: #{$light};
-  --bs-accordion-active-bg: transparent;
-  --bs-accordion-active-color: transparent;
-  --bs-accordion-btn-padding-y: 2rem;
+    &.light-accordion {
+        background-color: #{$light};
+        color: #{$dark};
 
-  .accordion-item:has(.show) {
-    background-color: #{$primary};
-    --bs-accordion-active-color: #{$dark};
-    // border-top: 3px solid #{$dark};
-    // border-color: #{$dark}
-  }
-
-  .accordion-item {
-    transition: all ease .5s;
-    position: relative;
-
-    .cup {
-      opacity: 0;
-      transition: opacity .3s ease;
-      margin-top: 0;
+        .accordion {
+            border-top: 3px solid #{$primary};
+            border-bottom: 3px solid #{$primary};
+            --bs-accordion-color: #{$dark};
+            --bs-accordion-border-color: #{$primary};
+            --bs-accordion-border-width: #{3px};
+            --bs-accordion-btn-active-icon: src= "";
+            --bs-accordion-btn-color: #{$dark};
+            --bs-accordion-bg: #{$light};
+            --bs-accordion-active-bg: transparent;
+            --bs-accordion-active-color: transparent;
+            --bs-accordion-btn-padding-y: 2rem;
+        }
     }
 
-    .text {
-      position: relative;
-      padding-left: 70px;
-      transition: padding ease .5s;
+    &.dark-accordion {
+        .row {
+            flex-direction: row-reverse;
+        }
+
+        .accordion {
+            border-top: 3px solid #{$primary};
+            border-bottom: 3px solid #{$primary};
+            // --bs-accordion-color: #{$light};
+            --bs-accordion-border-color: #{$primary};
+            --bs-accordion-border-width: #{3px};
+            --bs-accordion-btn-active-icon: src= "";
+            // --bs-accordion-btn-color: #{$dark};
+            // --bs-accordion-bg: #{$dark};
+            // --bs-accordion-active-bg: transparent;
+            // --bs-accordion-active-color: red;
+            --bs-accordion-btn-padding-y: 2rem;
+
+            .accordion-button {
+                color: #{$light};
+
+                &:hover,
+                &:not(.collapsed) {
+                    color: #{$dark};
+                }
+            }
+
+            .accordion-item {
+                color: #{$dark};
+            }
+        }
     }
 
-    .arrow {
-      position: absolute;
-      top: 50%;
-      left: 0;
-      transform: translate(0, -50%);
-      transition: transform ease .5s, left ease .5s;
-      transform-origin: center;
+    .accordion-item:has(.show) {
+        background-color: #{$primary};
+        --bs-accordion-active-color: #{$dark};
     }
 
-    &:hover {
-      background-color: #f6e077;
+    .accordion-item {
+        transition: background-color 1s ease-in-out;
+        position: relative;
 
-      .arrow {
-        transform: translate(20%, -50%) rotate(-45deg);
-      }
-    }
+        .cup {
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            margin-top: 0;
+        }
 
-    .accordion-button {
-      color: #{$dark-text};
-      background-color: transparent;
-      box-shadow: none;
-      display: flex;
-      column-gap: 1rem;
-
-      &::after {
-        background-image: none;
-      }
-
-      &:not(.collapsed) {
         .text {
-          padding-left: 20px;
+            position: relative;
+            padding-left: 70px;
+            transition: padding ease 0.5s;
         }
 
         .arrow {
-          left: 100%;
-          transform: translate(100%, -50%) rotate(135deg);
+            position: absolute;
+            top: 50%;
+            left: 0;
+            transform: translate(0, -50%);
+            transition: transform ease 0.5s, left ease 0.5s;
+            transform-origin: center;
         }
-      }
-    }
-  }
 
-  .show {
-    .cup {
-      opacity: 100%;
-      // NON possiamo usare il margin negativo perchè il padre ha la classe collapse e quindi ha un overflow quando
-      // si apre e si chiude, quindi risulterebbe in un effetto brutto e scattoso
-      //margin-top: -10%;
+        &:hover {
+            background-color: #f6e077;
+
+            .arrow {
+                transform: translate(20%, -50%) rotate(-45deg);
+            }
+        }
+
+        .accordion-button {
+            color: #{$dark-text};
+            background-color: transparent;
+            box-shadow: none;
+            display: flex;
+            column-gap: 1rem;
+
+            &::after {
+                background-image: none;
+            }
+
+            &:not(.collapsed) {
+                .text {
+                    padding-left: 20px;
+                }
+
+                .arrow {
+                    left: 100%;
+                    transform: translate(100%, -50%) rotate(135deg);
+                }
+            }
+        }
     }
-  }
+
+    .show {
+        .cup {
+            opacity: 100%;
+            // NON possiamo usare il margin negativo perchè il padre ha la classe collapse e quindi ha un overflow quando
+            // si apre e si chiude, quindi risulterebbe in un effetto brutto e scattoso
+            //margin-top: -10%;
+        }
+    }
 }
