--- a/resources/styles/partials/_diagonalAccordion.scss
+++ b/resources/styles/partials/_diagonalAccordion.scss
@@ -2,6 +2,7 @@
 
 .wabDa {
     rotate: 15deg;
+    margin-top: -8rem;
 
     .nav {
         --bs-nav-link-color: #{$light};
@@ -11,12 +12,16 @@
         width: 100%;
 
         .nav-link {
+            color: #{$light};
+            text-shadow: 0px 0 #{$primary}, 0 0px #{$primary}, 0px 0 #{$primary},
+                0 0px #{$primary};
+
             display: flex;
             align-items: flex-end;
             align-content: center;
             border-bottom: 3px solid #{$primary};
             text-align: left;
-            transition: all 300ms ease-in-out;
+            transition: color 300ms ease-in-out, text-shadow 300ms ease-in-out;
 
             .position-relative:has(.positioning) {
                 height: 100px;
@@ -38,22 +43,27 @@
             }
 
             .number {
-                transition: all 300ms ease-in-out;
+                color: #{$light};
+                transform: translateX(0%);
+                transition: color 300ms ease-in-out, transform 300ms ease-in-out, text-shadow 300ms ease-in-out;
             }
 
             &:hover,
-            &:focus {
+            &.active {
                 color: #{$dark} !important;
-                -webkit-text-stroke: 1px #{$primary};
+                text-shadow: -1px 0 #{$primary}, 0 1px #{$primary},
+                    1px 0 #{$primary}, 0 -1px #{$primary};
+                // -webkit-text-stroke: 1px #{$primary};
 
                 .number {
-                    align-self: flex-end;
-                -webkit-text-stroke: 1px #{$primary};
-
+                    color: #{$dark} !important;
+                    transform: translateX(80%);
+                    text-shadow: -1px 0 #{$primary}, 0 1px #{$primary},
+                    1px 0 #{$primary}, 0 -1px #{$primary};
                 }
 
                 .icon {
-                color: #{$primary} !important;
+                    color: #{$primary} !important;
 
                     margin-top: 1rem;
                 }
