--- a/resources/styles/partials/_accordion.scss
+++ b/resources/styles/partials/_accordion.scss
@@ -26,14 +26,9 @@
         .accordion {
             border-top: 3px solid #{$primary};
             border-bottom: 3px solid #{$primary};
-            // --bs-accordion-color: #{$light};
             --bs-accordion-border-color: #{$primary};
             --bs-accordion-border-width: #{3px};
             --bs-accordion-btn-active-icon: src= "";
-            // --bs-accordion-btn-color: #{$dark};
-            // --bs-accordion-bg: #{$dark};
-            // --bs-accordion-active-bg: transparent;
-            // --bs-accordion-active-color: red;
             --bs-accordion-btn-padding-y: 2rem;
 
             .accordion-button {
@@ -57,19 +52,20 @@
     }
 
     .accordion-item {
-        transition: background-color 1s ease-in-out;
+        transition: background-color #{$ease};
         position: relative;
 
         .cup {
             opacity: 0;
-            transition: opacity 0.3s ease;
+            transition: opacity #{$ease}, scale #{$ease};
             margin-top: 0;
+            scale: 0.9;
         }
 
         .text {
             position: relative;
             padding-left: 70px;
-            transition: padding ease 0.5s;
+            transition: padding #{$ease};
         }
 
         .arrow {
@@ -77,7 +73,7 @@
             top: 50%;
             left: 0;
             transform: translate(0, -50%);
-            transition: transform ease 0.5s, left ease 0.5s;
+            transition: transform #{$ease}, left #{$ease};
             transform-origin: center;
         }
 
@@ -116,6 +112,7 @@
     .show {
         .cup {
             opacity: 100%;
+            scale: 1;
             // NON possiamo usare il margin negativo perchè il padre ha la classe collapse e quindi ha un overflow quando
             // si apre e si chiude, quindi risulterebbe in un effetto brutto e scattoso
             //margin-top: -10%;
