--- a/resources/styles/partials/_inputs.scss
+++ b/resources/styles/partials/_inputs.scss
@@ -1,7 +1,6 @@
-.form-control{
-  border-width: 0 0 1px 0;
+.form-control {
+    border-width: 0 0 1px 0;
 
-  &:focus{
-
-  }
+    // &:focus {
+    // }
 }
