--- a/resources/styles/partials/_navlink.scss
+++ b/resources/styles/partials/_navlink.scss
@@ -1,6 +1,5 @@
 @use "./variables";
 
-
 .wab-nav {
     .navbar-nav {
         .nav-link {
@@ -10,11 +9,11 @@
     }
 
     .dropdown-item {
-        transition: all 0.3s ease-in-out;
+        // transition: background 0.3s ease-in-out;
 
         .icon {
             margin-left: 0.5rem;
-            transition: all 0.3s ease-in-out;
+            transition: rotate #{$ease};
         }
     }
 
@@ -27,10 +26,12 @@
         }
     }
 
+    //
+
     .nav-link,
     .dropdown {
         position: relative;
-        transition: all 0.3s ease-in-out;
+        // transition: all 0.3s ease-in-out;
 
         &:not(.active) {
             &::after {
@@ -41,32 +42,30 @@
                 position: absolute;
                 bottom: 0;
                 left: 0;
-                transition: all 0.3s ease-in-out;
+                transition: opacity #{$ease}, width #{$ease};
             }
 
             &:hover::after {
                 opacity: 1;
                 width: 100%;
-
-                transition: all 0.3s ease-in-out;
             }
         }
     }
 
     .nav-link.active {
-        transition: all 0.3s ease-in-out;
+        transition: all #{$ease};
         background-color: transparent;
 
         // changes the default highlight size
         &.wab-highlight {
             --x-offset: 0.8rem;
-                --y-offset: 0.2rem;
+            --y-offset: 0.2rem;
         }
     }
 
     .dropdown-toggle {
         .imgWhite {
-            transition: all 0.3s ease-in-out;
+            transition: rotate #{$ease};
         }
 
         &:hover {
@@ -88,7 +87,13 @@
             --bs-nav-link-color: #{$light};
             --bs-nav-link-hover-color: #{$dark};
         }
+        .dropdown-item {
+            transition: color #{$ease};
 
+            .icon {
+                transition: color #{$ease}, rotate #{$ease};
+            }
+        }
         .dropdown-item:hover,
         .dropdown-item:focus {
             color: #{$primary};
@@ -128,12 +133,8 @@
             --bs-btn-bg: #{$primary};
             --bs-btn-border-color: #{$dark};
             --bs-btn-color: #{$dark};
-                --bs-btn-hover-bg: #{$primary};
+            --bs-btn-hover-bg: #{$primary};
             --bs-btn-hover-border-color: #{$dark};
-
-
-
-            
         }
 
         .navbar-nav {
