--- a/resources/styles/partials/_service-card.scss
+++ b/resources/styles/partials/_service-card.scss
@@ -1,16 +1,15 @@
 @use "./variables";
 
 .service-card {
- h4,h5, .border-bottom{
-  transition: all ease 1s;
- }
-  &:hover {
-
-   h4,h5 {
-    color: variables.$primary-text !important;
-   }
-   .border-bottom{
-    border-color: variables.$dark !important;
-   }
-  }
+    h4, .border-bottom {
+        transition: color #{$ease}, border-color #{$ease};
+    }
+    &:hover {
+        h4 {
+            color: variables.$primary-text !important;
+        }
+        .border-bottom {
+            border-color: variables.$dark !important;
+        }
+    }
 }
