--- a/resources/styles/partials/_utility.scss
+++ b/resources/styles/partials/_utility.scss
@@ -1,22 +1,20 @@
 @use "./variables";
 
-
-
 .highlight {
- background:  #f6e077;
- color: #1d1d1d;
- // padding:0 0.5rem;
+    background: #f6e077;
+    color: #1d1d1d;
+    // padding:0 0.5rem;
 }
 
 .highlightRed {
- background:  #95363E;
- color: #FAF8E5;
+    background: #95363e;
+    color: #faf8e5;
 }
 
-.z-index-1{
- z-index: -1;
+.z-index-1 {
+    z-index: -1;
 }
 
-.z-index1{
- z-index: 1;
+.z-index1 {
+    z-index: 1;
 }
